# agent-iq

./: .gitignore  CONTRIBUTOR_ATTESTATION.md  NOTICE  README.md  SECURITY.md  TESTING.md  package-lock.json  package.json  pnpm-lock.yaml  pytest.ini
agents/: README.md
api/: openapi.yaml  pyproject.toml  requirements.txt
api/app/: main.py  models.py  schemas.py
api/app/models/: run.py
api/app/providers/: base.py  playwright_local.py
api/app/routes/: add_to_cart.py  runs.py  sessions.py
api/app/services/: evaluate.py  robots_service.py  sessions.py
api/app/tests/: test_api.py
api/recipes/: add_white_tshirt_to_cart.v1.yaml
app/: page.tsx
browser-extension/: README.md  background.js  content.js  hello.html  manifest.json  popup.js
dataviz/: analyze_metrics.py  dashboard_simple.js  index.html  serve_dashboard.py  workflow-runs.csv
docs/: BearCubs_20250310.json  webgames_df.csv
lib/: metrics-cache.ts
pytest/: README.md  __init__.py  conftest.py  test_runner.py
pytest/fixtures/: __init__.py
pytest/integration/: __init__.py  test_api_endpoint.py
pytest/unit/: __init__.py  test_env.py  test_robots_api.py  test_robots_github.py  test_robots_service.py  test_robots_simple.py
ui/: README.md  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
ui/agents/: define-agent.ts  test-agent.ts
ui/app/: globals.css  layout.tsx  page.tsx
ui/components/: MetricsDashboard.tsx
ui/lib/: dom-similarity.ts  metrics-cache.ts
ui_old/: CLAUDE.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
ui_old/app/: page.tsx  (+2 more)
(+118 files in other folders)
